--- a/Notebooks/ETL PROCESS.ipynb
+++ b/Notebooks/ETL PROCESS.ipynb
@@ -712,6 +712,231 @@
     "\n",
     "df_final_df.show(5)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "dd365eeb-e872-47b1-aba2-3673ab140b2a",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "clean_df=spark.table(\"clean_walmart_sales\")\n",
+    "spark.conf.get(\"spark.sql.shuffle.partitions\")\n",
+    "display(clean_df)\n",
+    "spark.conf.set(\"spark.sql.shuffle.partitions\",50)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "f83d3238-955d-4860-ae8d-75905b437388",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "optimized_monthly_df=monthly_sales_df.coalesce(8)\n",
+    "\n",
+    "optimized_monthly_df.write.mode(\"overwrite\").saveAsTable(\"curated_monthly_sales\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "5a18d798-c50a-4706-b708-598715a34578",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "monthly_sales_df.explain()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "6919cab4-82f8-485c-95da-df048b2aed6e",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "spark.sql(\"\"\"\n",
+    "          create table if not exists curated_monthly_sales_delta\n",
+    "          using delta\n",
+    "          as\n",
+    "          select * from curated_monthly_sales\n",
+    "          \"\"\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "1ce2190a-652c-4023-997c-eb6cb8bb8d42",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "display(spark.sql(\"DESCRIBE DETAIL curated_monthly_sales_delta\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "05d659b4-ece2-4aea-9f3b-886d94a1d266",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "from pyspark.sql.functions import lit\n",
+    "\n",
+    "incremental_df=(\n",
+    "    spark.table(\"clean_walmart_sales\")\n",
+    "    .filter(\"Year=2012 and Month=12\")\n",
+    "    .withColumn(\"Total_Monthly_Sales\",lit(999999.0))\n",
+    "    .select(\"STORE\",\"Year\",\"Month\",\"Total_Monthly_Sales\")\n",
+    ")\n",
+    "\n",
+    "incremental_df.show(5)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "54a97133-a273-4c19-a82f-1acc4567e9bd",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "incremental_df.createOrReplaceTempView(\"incremental_updates\")\n",
+    "spark.sql(\"\"\"\n",
+    "MERGE INTO curated_monthly_sales_delta AS target\n",
+    "USING incremental_updates AS source\n",
+    "ON target.Store = source.Store\n",
+    "AND target.Year = source.Year\n",
+    "AND target.Month = source.Month\n",
+    "\n",
+    "WHEN MATCHED THEN\n",
+    "  UPDATE SET target.Total_Monthly_Sales = source.Total_Monthly_Sales\n",
+    "\n",
+    "WHEN NOT MATCHED THEN\n",
+    "  INSERT *\n",
+    "\"\"\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "96ee155a-c2db-42c8-945e-a6647203130b",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "spark.table(\"curated_monthly_sales_delta\") \\\n",
+    "     .filter(\"Year = 2012 AND Month = 12\") \\\n",
+    "     .show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "c3402184-23be-44fc-8b15-d2ad053b7dd2",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "spark.sql(\"\"\"\n",
+    "SELECT * FROM curated_monthly_sales_delta VERSION AS OF 0\n",
+    "\"\"\")"
+   ]
   }
  ],
  "metadata": {
